# MDIntrinsicDimension

./: .buildinfo  .gitignore  NTL9_plots.html  README.md  estimators.html  genindex.html  index.html  installation.html  objects.inv  projections.html  pyproject.toml  quickstart.html  rmsd.html  search.html  searchindex.js  uv.lock.knowngood  villin_data.html  villin_plots.html
.github/workflows/: execute_notebooks.yml  pytest.yml  sphinx.yml
_sources/: NTL9_plots.ipynb.txt  estimators.ipynb.txt  projections.ipynb.txt  quickstart.rst.txt  rmsd.ipynb.txt  villin_plots.ipynb.txt
data/: short_2f4k_f0.xtc
docs/: NTL9_plots.ipynb  conf.py  estimators.ipynb  estimators_tests.ipynb  examples_foreword.ipynb  index.rst  installation.rst  pca_tica.ipynb  projections.ipynb  quickstart.rst  reexecute_notebooks.sh  rmsd.ipynb  rmsf.ipynb  sbatch_ipynb  villin_benchmark.py  villin_data.ipynb  villin_plots.ipynb  villin_sections.ipynb
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  intrinsic_dimension.doctree  quickstart.doctree  secondary_structure_id.doctree  test2.doctree  villin_data.doctree  villin_plots.doctree
docs/_build/doctrees/examples/: myoglobin.doctree  test2.doctree  test3.doctree
docs/_build/html/: .buildinfo  bba.html  genindex.html  index.html  installation.html  intrinsic_dimension.html  objects.inv  quickstart.html  search.html  searchindex.js  secondary_structure_id.html  section_id.html  test2.html  villin_data.html  villin_plots.html
docs/_build/html/.doctrees/: bba.doctree  environment.pickle  index.doctree  installation.doctree  intrinsic_dimension.doctree  quickstart.doctree  section_id.doctree  test2.doctree  villin_data.doctree  villin_plots.doctree
docs/_build/html/.doctrees/examples/: test.doctree  test2.doctree
docs/_build/html/_sources/: bba.ipynb.txt  intrinsic_dimension.rst.txt  secondary_structure_id.rst.txt  section_id.rst.txt  test2.ipynb.txt  villin_plots.ipynb.txt
docs/_build/html/_sources/examples/: test.ipynb.txt  test2.ipynb.txt  test3.ipynb.txt
docs/_build/html/_static/: custom.css
docs/_build/html/examples/: myoglobin.html  test.html  test2.html  test3.html
docs/_build/jupyter_execute/: bba.ipynb  test2.ipynb  villin_data.ipynb  villin_plots.ipynb
docs/_build/jupyter_execute/examples/: test.ipynb  test2.ipynb  test3.ipynb
docs/_old_static/: custom.css
docs/_static/: custom.css
docs/examples/villin/: .2F4K_0.xtc  .2F4K_1.xtc  .2F4K_2.xtc  .2F4K_3.xtc  .2F4K_4.xtc  .2F4K_5.xtc  .2F4K_F.xtc  .2F4K_U1.xtc  .2F4K_U2.xtc  2F4K_F.xtc  2F4K_U1.xtc  2F4K_U2.xtc  rcsb_pdb_2F4K.fasta
docs/html/: .buildinfo  genindex.html  index.html  index_old.html  installation.html  intrinsic_dimension.html  modules.html  objects.inv  old.html  quickstart.html  search.html  searchindex.js  secondary_structure_id.html  section_id.html
docs/html/.doctrees/: environment.pickle  index.doctree  index_old.doctree  installation.doctree  intrinsic_dimension.doctree  modules.doctree  old.doctree  quickstart.doctree  secondary_structure_id.doctree  section_id.doctree
docs/html/_sources/: index.rst.txt  installation.rst.txt  intrinsic_dimension.rst.txt  old.rst.txt  quickstart.rst.txt  secondary_structure_id.rst.txt  section_id.rst.txt
docs/maintainer/: combined_figures.py  merged_figures.py  reexecute_notebooks.sh  sett.py
examples/: test.ipynb
examples/myoglobin/: .myo_noh_300.xtc  .myo_noh_340.xtc  .myo_noh_380.xtc  .myo_noh_420.xtc  .myo_noh_460.xtc  .myo_noh_500.xtc  myo_noh_300.xtc  myo_noh_340.xtc  myo_noh_380.xtc  myo_noh_420.xtc  myo_noh_460.xtc  myo_noh_500.xtc
intrinsic_dimension/: __init__.py  compute_id.py  compute_projections.py  intrinsic_dimension.py  secondary_structure_id.py  section_id.py  section_intrinsic_dimension.py
md_intrinsic_dimension/: __init__.py  compute_id.py  compute_projections.py  md_intrinsic_dimension.py  secondary_structure_id.py  section_id.py
tests/: 1d_projection_array.npy  conftest.py  global.npy  load_molecule.py  test_md_intrinsic_dimension.py  test_secondary_structure_id.py  test_section_id.py
tests/data/: 2hbaA00_320_0.xtc  README.md  create_mdCATH_test_data.ipynb
tests/test_outputs/: global_all.npy  global_last.npy  local.npy  local_coordinates.npy  mean_all.npy  mean_last.npy  secondary_structure_id.csv  secondary_structure_id.pkl  secondary_structure_id_table.csv  secondary_structure_id_table.pkl  section_id.csv  section_id.npy  section_id.pkl
