[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["md_intrinsic_dimension"]

[project]
name = "MDIntrinsicDimension"
version = "0.1.0"
description = "Package for intrinsic dimension analysis in molecular dynamics of proteins"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Irene Cazzaniga", email = "irenecazzaniga@cnr.it" },
  { name = "Toni Giorgino", email = "toni.giorgino@cnr.it" }
]
keywords = ["molecular-dynamics", "intrinsic-dimension", "machine-learning"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "moleculekit",
    "mdtraj", # optional dependency of moleculekit
    "scikit-dimension",
    "matplotlib"  # An undeclared dependency of scikit-dimension ?
]

[dependency-groups]
dev = [
    "pytest",
    "ipython",
    "jupyter",
    "jupyter-ruff",
    "jupyterlab>=4.4.7",
]

docs = [
    "sphinx",
    "matplotlib",
    "seaborn",
    "docutils==0.20.1",
    "furo", # optional, clean modern theme
    "nbsphinx", # for rendering notebooks
    "myst-parser", # for Markdown support (optional)
    "myst-nb",
    "sphinx-rtd-theme>=3.0.2", # nice for type-annotated APIs
    "sphinx-autodoc-typehints",
]

[project.urls]
"Homepage" = "https://github.com/icazzani/MDIntrinsicDimension"
"Documentation" = "https://giorginolab.github.io/MDIntrinsicDimension"
"Issue Tracker" = "https://github.com/icazzani/MDIntrinsicDimension/issues"

